# rlmgrep

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
rlmgrep/: __init__.py  cli.py  config.py  file_map.py  ingest.py  interpreter.py  render.py  rlm.py
skills/rlmgrep-usage/: SKILL.md
tests/: test_cli_signature_mode.py  test_custom_signature_parsing.py  test_markitdown_activation.py  test_signature_serialization.py
