[project]
name = "rlmgrep"
version = "0.1.32"
description = "Grep-shaped CLI search powered by DSPy RLM"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "rlmgrep" }]
license = { text = "MIT" }
dependencies = [
  "dspy>=3.1.1",
  "markitdown[all]>=0.1.4",
  "pathspec>=0.12.1",
  "pypdf>=4.0.0",
  "rich>=13.7.0",
]

[project.scripts]
rlmgrep = "rlmgrep.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rlmgrep*"]
